-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9, 10, 11
-
Component/s: hotspot
-
b14
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8203535 | 11.0.1 | Nils Eliasson | P3 | Resolved | Fixed | team |
Adding -XX:-UseLoopPredicate when running specjvm2008/mpedaudio makes the benchmark fail with "Composite result: not valid". The bug is reproduced with the method "javazoom.jl.decoder.huffcodetab::huffman_decoder" (only inlining "javazoom.jl.decoder.BitReserve::hget1bit")
>> SPECjvm2008/data$ bin/java -XX:+UnlockDiagnosticVMOptions -XX:-UseLoopPredicate -XX:CICompilerCount=1 -Xbatch -XX:LoopMaxUnroll=0 -XX:CompileCommand=quiet -XX:-CICompileOSR -XX:+PrintCompilation -XX:-UseFPUForSpilling -XX:+UseG1GC -Xmx2G -Xms2G -XX:-TieredCompilation -XX:CompilerDirectivesFile=mpegaudio.dir -Dspecjvm.home.dir=.../SPECjvm2008 -jar .../SPECjvm2008.jar -ikv -ict --benchmarkThreads 1 --warmuptime 30 --iterationTime 30 mpegaudio
>> SPECjvm2008/data$ bin/java -XX:+UnlockDiagnosticVMOptions -XX:-UseLoopPredicate -XX:CICompilerCount=1 -Xbatch -XX:LoopMaxUnroll=0 -XX:CompileCommand=quiet -XX:-CICompileOSR -XX:+PrintCompilation -XX:-UseFPUForSpilling -XX:+UseG1GC -Xmx2G -Xms2G -XX:-TieredCompilation -XX:CompilerDirectivesFile=mpegaudio.dir -Dspecjvm.home.dir=.../SPECjvm2008 -jar .../SPECjvm2008.jar -ikv -ict --benchmarkThreads 1 --warmuptime 30 --iterationTime 30 mpegaudio
- backported by
-
JDK-8203535 Illegal countedLoops transformation
-
- Resolved
-