8193935: Illegal countedLoops transformation

Truncation can sometimes not be removed

Reviewed-by: kvn